--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-sharp": "^1.6.42",
     "gatsby-plugin-typography": "^1.7.10",
+    "gatsby-remark-images": "^1.5.61",
     "gatsby-source-airtable": "0.0.4",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.26",
